Corrected row gap for profile info at 488px wide

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -117,7 +117,7 @@
     .profile__info {
         margin-top: 30px;
         grid-template-columns: minmax(auto, 224px) auto;
-        grid-gap: 14px 5px;
+        grid-gap: 8px 5px;
         justify-items: center;
     }
     .profile__name {
